<resources>
    <string name="app_name">Cap &amp; Ino Rebanho</string>
    <string name="app_full_name">com.timsoft.meurebanho</string>
    <string name="app_short_name">capino-soft</string>
    <string name="raw_base_path">/res/raw</string>
    <string name="exclusion_confirmation">Confirmação de Exclusão</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Incluir</string>
    <string name="delete">Excluir</string>
    <string name="edit">Alterar</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="birth">Nascimento</string>
    <string name="discard_changes">Descartar alterações</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_settings">Configurações</string>
    <string name="animals">Animais</string>
    <string name="animal_id_label">Nº IDENTIFICAÇÃO</string>
    <string name="animal_id_hint">Nº Identificação</string>
    <string name="alert_invalid_id">Nº Identificação inválida</string>
    <string name="alert_id_already_used">Nº de Identificação já utilizada</string>
    <string name="animal_specie_label">ESPÉCIE</string>
    <string name="animal_category_label">CATEGORIA</string>
    <string name="animal_race_label">RAÇA</string>
    <string name="animal_race_m_label">RAÇA*</string>
    <string name="animal_sex_label">SEXO</string>
    <string name="animal_sex_m_label">SEXO*</string>
    <string name="male">Macho</string>
    <string name="female">Fêmea</string>
    <string name="animal_name_label">NOME</string>
    <string name="animal_name_hint">Nome do Animal</string>
    <string name="animal_ear_tag_label">BRINCO/Nº DE CONTROLE</string>
    <string name="animal_ear_tag_hint">Brinco/Nº de Controle</string>
    <string name="animal_patrimony_number_label">PATRIMÔNIO/Nº DE PATRIMÔNIO</string>
    <string name="animal_patrimony_number_hint">Patrimônio/Nº de Patrimônio</string>
    <string name="animal_birth_date_label">DATA DE NASCIMENTO</string>
    <string name="animal_birth_date_m_label">DATA DE NASCIMENTO*</string>
    <string name="animal_birth_date_hint">Data de nascimento</string>
    <string name="animal_aquisition_date_label">DATA DE AQUISIÇÃO</string>
    <string name="animal_acquisition_date_hint">Data de aquisição</string>
    <string name="animal_sell_date_label">DATA DA VENDA</string>
    <string name="animal_sell_date_hint">Data da venda</string>
    <string name="animal_death_date_label">DATA DA MORTE</string>
    <string name="animal_death_reason_label">MOTIVO DA MORTE</string>
    <string name="animal_acquisition_value_label">VALOR DE AQUISIÇÃO</string>
    <string name="animal_aquisition_value_hint">Valor de aquisição</string>
    <string name="animal_sell_value_label">VALOR DE VENDA</string>
    <string name="animal_sell_value_hint">Valor de venda</string>
    <string name="animal_father_label">PAI</string>
    <string name="animal_father_hint">Pai</string>
    <string name="animal_mother_label">MÃE</string>
    <string name="animal_mother_hint">Mãe</string>
    <string name="add_animal">Incluir Animal</string>
    <string name="detail_animal">Detalhar Animal</string>
    <string name="edit_animal">Alterar Animal</string>
    <string name="find_animal">Buscar Animal</string>
    <string name="alert_fill_animal_name">Nome do animal deve ser preenchido!</string>
    <string name="confirm_animal_exclusion">Confirma a exclusão do animal?</string>
    <string name="specie_image">Imagem da Espécie</string>
    <string name="specie_not_selected">Espécie não selecionada</string>
    <string name="category_not_selected">Categoria não selecionada</string>
    <string name="race_not_selected">Raça não selecionada</string>
    <string name="sex_not_selected">Sexo não selecionado</string>
    <string name="birth_date_invalid">Data de nascimento inválida</string>
    <string name="aquisition_date_invalid">Data de aquisição inválida</string>
    <string name="sell_date_invalid">Data de venda inválida</string>
    <string name="death_date_invalid">Data de morte inválida</string>
    <string name="events">Eventos</string>
    <string name="add_event">Incluir Evento</string>
    <string name="edit_event">Editar Evento</string>
    <string name="farms">Fazendas</string>
    <string name="farm_name_hint">Nome da Fazenda</string>
    <string name="add_farm">Incluir Fazenda</string>
    <string name="edit_farm">Alterar Fazenda</string>
    <string name="alert_fill_farm_name">Nome da Fazenda deve ser preenchido!</string>
    <string name="confirm_farm_exclusion">Confirma a exclusão da fazenda?</string>
    <string name="specie_bovine">Bovino</string>
    <string name="specie_caprine">Caprino</string>
    <string name="specie_equine">Equino</string>
    <string name="specie_ovine">Ovino</string>
    <string name="specie_swine">Suíno</string>
    <string name="categories_cria">Cria</string>
    <string name="categories_recria">Recria</string>
    <string name="categories_terminacao">Terminação</string>
    <string name="categories_matriz">Matriz</string>
    <string name="categories_reprodutor">Reprodutor</string>
    <string name="animal_parental_father_label">PAI</string>
    <string name="animal_parental_mother_label">MÃE</string>
    <string name="animal_main_available_label">Disp.</string>
    <string name="animal_main_sold_label">Vendidos</string>
    <string name="animal_main_death_label">Mortos</string>
    <string name="months">Meses</string>
    <string name="animal_picture_label">FOTO</string>
    <string name="animal_picture_hint">Foto</string>
    <string name="image_saved_success">Imagem salva com sucesso</string>
    <string name="camera_not_supported">Não há suporte a câmera no dispositivo</string>
    <string name="error_deleting_file">Ocorreu um erro ao tentar apagar o arquivo</string>
    <string name="take_picture">Tirar foto</string>
    <string name="select_picture">Escolher foto</string>
    <string name="remove_picture">Remover foto</string>
    <string name="take_other_picture">Tirar outra foto</string>
    <string name="select_other_picture">Escolher outra foto</string>
    <string name="aquisition_value_invalid">Valor de aquisição inválido</string>
    <string name="treatment_edit">Alterar Tratamento</string>
    <string name="treatment_add">Incluir Tratamento</string>
    <string name="treatment_date_label">DATA DE TRATAMENTO</string>
    <string name="treatment_date_m_label">DATA DE TRATAMENTO*</string>
    <string name="treatment_date_hint">Data do Tratamento</string>
    <string name="treatment_reason_label">MOTIVO DO TRATAMENTO</string>
    <string name="treatment_reason_m_label">MOTIVO DO TRATAMENTO*</string>
    <string name="treatment_reason_hint">Motivo do Tratamento</string>
    <string name="treatment_medication_label">MEDICAÇÃO</string>
    <string name="treatment_medication_m_label">MEDICAÇÃO*</string>
    <string name="treatment_medication_hint">Medicação</string>
    <string name="treatment_withdrawal_period_label">PERÍODO DE CARÊNCIA (DIAS)</string>
    <string name="treatment_withdrawal_period_hint">Período de Carência (dias)</string>
    <string name="treatment_cost_label">CUSTO</string>
    <string name="treatment_cost_hint">Custo</string>
    <string name="treatment_date_invalid">Data de tratamento inválida</string>
    <string name="treatment_reason_invalid">Motivo do tratamento inválido</string>
    <string name="treatment_medication_invalid">Medicação do tratamento inválida</string>
    <string name="treatment_cost_invalid">Custo de tratamento inválido</string>
    <string name="treatment_confirm_delete">Confirma a exclusão do tratamento?</string>
    <string name="treatment_withdrawal_period_invalid">Período de carência inválido</string>
    <string name="treatment_detail">Detalhar Tratamento</string>
    <string name="sale_confirm_delete">Confirma a exclusão da venda?</string>
    <string name="sale_date_label">DATA DA VENDA</string>
    <string name="sale_date_m_label">DATA DA VENDA*</string>
    <string name="sale_value_label">VALOR DA VENDA</string>
    <string name="sale_value_m_label">VALOR DA VENDA*</string>
    <string name="sale_buyer_label">COMPRADOR</string>
    <string name="sale_buyer_m_label">COMPRADOR*</string>
    <string name="confirm_delete">Confirmar a Exclusão</string>
    <string name="notes_label">ANOTAÇÕES</string>
    <string name="notes_hint">Anotações</string>
    <string name="sale_add">Registrar Venda</string>
    <string name="sale_edit">Alterar Venda</string>
    <string name="sale_date_hint">Data da Venda</string>
    <string name="observation_date_hint">Data da Observação</string>
    <string name="sale_value_hint">Valor da Venda</string>
    <string name="sale_buyer_hint">Comprador</string>
    <string name="sale_date_invalid">Data da venda inválida</string>
    <string name="sale_value_invalid">Valor da venda inválido</string>
    <string name="sale_buyer_name_invalid">Nome do comprador inválido</string>
    <string name="seller_name_invalid">Nome do vendedor inválido</string>
    <string name="animal_seller_name_label">NOME DO VENDEDOR</string>
    <string name="seller_name_hint">Nome do Vendedor</string>
    <string name="sale_detail">Detalhar Venda</string>
    <string name="death_confirm_delete">Confirma a exclusão da morte?</string>
    <string name="death_add">Registrar Morte</string>
    <string name="death_edit">Alterar Morte</string>
    <string name="death_date_hint">Data da Morte</string>
    <string name="death_date_label">DATA DA MORTE</string>
    <string name="death_date_m_label">DATA DA MORTE*</string>
    <string name="death_reason_label">MOTIVO DA MORTE</string>
    <string name="death_reason_m_label">MOTIVO DA MORTE*</string>
    <string name="death_reason_hint">Motivo da Morte</string>
    <string name="death_reason_invalid">Motivo da morte inválido</string>
    <string name="death_detail">Detalhar Morte</string>
    <string name="retire">Exclusão</string>
    <string name="retire_register_confirm">Confirma a exclusão do animal?</string>
    <string name="retire_delete_confirm">Confirma o cancelamento da exclusão do animal?</string>
    <string name="animal_main_retire_label">Excluídos</string>
    <string name="search_hint">Pesquisar animais...</string>
    <string name="drawer_open">Exibir Opções</string>
    <string name="drawer_close">Ocultar Opções</string>
    <string name="backup">Cópia de Segurança</string>
    <string name="contacts">Contatos</string>
    <string name="rate_app">Avaliar Aplicação</string>
    <string name="about">Sobre</string>
    <string name="create_backup_label">Criar cópia de segurança</string>
    <string name="restore_backup_label">Restaurar cópia de segurança</string>
    <string name="send_to">Enviar para</string>
    <string name="select_restore_origin">Selecione o local do arquivo</string>
    <string name="select_restore_file">Selecione o arquivo de backup a restaurar</string>
    <string name="confirm_restore">Confirma a restauração?</string>
    <string name="all_data_lost">ATENÇÃO: TODOS OS DADOS ATUAIS SERÃO PERDIDOS!</string>
    <string name="ok">Ok</string>
    <string name="sort_animal">Ordenar Animais</string>
    <string name="filter_animal">Filtrar Animais</string>
    <string name="remove_filter_animal">Remover Filtro</string>
    <string name="select_filter_type">Selecione o tipo do filtro</string>
    <string name="select_filter_sex">Selecione o sexo</string>
    <string name="select_filter_race">Selecione a raça</string>
    <string name="ascending">Crescente</string>
    <string name="descending">Decrescente</string>
    <string name="select_sort_type">Selecione o tipo de ordenação</string>
    <string name="retire_animal">Excluir Animal</string>
    <string name="undo_retire">Cancelar Exclusão de Animal</string>
    <string name="observation_detail_label">Observação</string>
    <string name="occurrence_observation_label">Data da Observação</string>
</resources>