<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/magnify"
        android:orderInCategory="100"
        android:title="@string/find_animal"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="100"
        android:title="@string/sort_animal"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_outline"
        android:orderInCategory="100"
        android:title="@string/filter_animal"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_remove_filter"
        android:icon="@drawable/ic_filter_remove_outline"
        android:orderInCategory="100"
        android:title="@string/remove_filter_animal"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_backup"
        android:title="@string/backup"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_contacts"
        android:title="@string/contacts"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rate_app"
        android:title="@string/rate_app"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>