<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingEnd="@dimen/activity_padding_right"
    android:paddingLeft="@dimen/activity_padding_left"
    android:paddingRight="@dimen/activity_padding_right"
    android:paddingStart="@dimen/activity_padding_left"
    android:paddingTop="@dimen/activity_padding_top">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dummyfocus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:nextFocusLeft="@id/dummyfocus"
                        android:nextFocusUp="@id/dummyfocus"
                        android:text="@string/animal_id_label"
                        android:textAppearance="@style/LabelTextAppearance" />

                    <EditText
                        android:id="@+id/am_id"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/animal_id_hint"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/am_picture"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/animal_picture_hint"
                        android:src="@drawable/cow_hl" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_name_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/am_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/animal_name_hint"
                android:inputType="textCapWords"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/animal_sex_m_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <RadioGroup
                android:id="@+id/radio_group_add_animal_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/am_sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_padding_left"
                    android:paddingRight="@dimen/activity_padding_right"
                    android:text="@string/male"
                    android:textAllCaps="true" />

                <RadioButton
                    android:id="@+id/am_sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_padding_left"
                    android:paddingRight="@dimen/activity_padding_right"
                    android:text="@string/female"
                    android:textAllCaps="true" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_race_m_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <Spinner
                android:id="@+id/am_race"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_ear_tag_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/am_ear_tag"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/animal_ear_tag_hint"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_birth_date_m_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/am_birth_date"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="248dp"
                    android:layout_height="40dp"
                    android:text="@string/animal_birth_date_hint"
                    android:textAppearance="@style/HintTextAppearance" />

                <ImageButton
                    android:id="@+id/am_clear_birth_date"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/cancel"
                    android:src="@drawable/ic_cancel_hl" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_aquisition_date_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/am_acquisition_date"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="248dp"
                    android:layout_height="40dp"
                    android:text="@string/animal_acquisition_date_hint"
                    android:textAppearance="@style/HintTextAppearance" />

                <ImageButton
                    android:id="@+id/am_clear_acquisition_date"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/cancel"
                    android:src="@drawable/ic_cancel_hl" />
            </LinearLayout>

            Ac
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_acquisition_value_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/am_acquisition_value"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:digits="1234567890.,"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/animal_seller_name_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/am_seller_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/seller_name_hint"
                android:inputType="textCapWords"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>