<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingEnd="@dimen/activity_padding_right"
    android:paddingLeft="@dimen/activity_padding_left"
    android:paddingRight="@dimen/activity_padding_right"
    android:paddingStart="@dimen/activity_padding_left"
    android:paddingTop="@dimen/activity_padding_top">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sale_date_m_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <!--Date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/sm_date"
                    style="?android:attr/spinnerStyle"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/sale_date_hint"
                    android:textAppearance="@style/HintTextAppearance" />

                <ImageButton
                    android:id="@+id/sm_clear_date"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/cancel"
                    android:src="@drawable/cancel" />

            </LinearLayout>

            <!--Value-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sale_value_m_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/sm_value"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/sale_value_hint"
                android:inputType="numberDecimal"/>

            <!--Buyer-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sale_buyer_m_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/sm_buyer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sale_buyer_hint"
                android:inputType="textCapSentences"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"/>

            <!--Notes-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/notes_label"
                android:textAppearance="@style/LabelTextAppearance" />

            <EditText
                android:id="@+id/sm_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_hint"
                android:inputType="textCapSentences"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>