<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_animal_list_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- status radio selector -->

    <RadioGroup
        android:id="@+id/radio_group_animal_list_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_animal_list_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animal_main_available_label" />

        <RadioButton
            android:id="@+id/radio_animal_list_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/animal_main_sold_label" />

        <RadioButton
            android:id="@+id/radio_animal_list_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_main_death_label" />

        <RadioButton
            android:id="@+id/radio_animal_list_retired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animal_main_retire_label" />
    </RadioGroup>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- animal list -->
        <ListView
            android:id="@+id/list_animal_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_add_animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/plus"
            app:layout_anchor="@id/list_animal_list"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>