<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:layout_marginTop="10dp"
android:focusable="true"
android:focusableInTouchMode="true"
android:paddingEnd="@dimen/activity_padding_right"
android:paddingLeft="@dimen/activity_padding_left"
android:paddingRight="@dimen/activity_padding_right"
android:paddingStart="@dimen/activity_padding_left"
android:paddingTop="@dimen/activity_padding_top">

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/occurrence_observation_label"
            android:textAppearance="@style/LabelTextAppearance" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/oc_date"
                style="?android:attr/spinnerStyle"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:text="@string/occurrence_observation_label"
                android:textAppearance="@style/HintTextAppearance" />

            <ImageButton
                android:id="@+id/oc_clear_date"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_cancel_hl" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/observation_detail_label"
            android:textAppearance="@style/LabelTextAppearance" />

        <EditText
            android:id="@+id/oc_observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/observation_detail_label"
            android:lines="8"/>


    </LinearLayout>
</ScrollView>

</RelativeLayout>